--- a/webdash-performance-budget.html
+++ b/webdash-performance-budget.html
@@ -1,6 +1,6 @@
 <link rel="import" href="../polymer/polymer-element.html">
-<link rel="import" href="../bower_components/paper-spinner/paper-spinner.html">
-<link rel="import" href="../bower_components/iron-icons/iron-icons.html">
+<link rel="import" href="../../bower_components/paper-spinner/paper-spinner.html">
+<link rel="import" href="../../bower_components/iron-icons/iron-icons.html">
 
 <script src="/bower_components/circles-el/circles.min.js"></script>
 
