Add empty state. Closes #1

--- a/webdash-performance-budget.html
+++ b/webdash-performance-budget.html
@@ -30,12 +30,36 @@
         margin-top: -50px;
         color: var(--danger);
       }
+
+      #empty-state {
+        text-align: center;
+        padding: 20px 40px;
+        max-width: 400px;
+        line-height: 1.8;
+      }
+
+      #empty-state h4 {
+        margin-bottom: 0;
+      }
+
+      #empty-state p {
+        margin-top: 10px;
+        opacity: 0.7;
+      }
     </style>
     <div id="plugin">
       <template is="dom-if" if="{{limitReached}}">
         <iron-icon icon="warning" class="limit-reached"></iron-icon>
       </template>
       <div class="circle" id="chart"></div>
+      <template is="dom-if" if="{{emptyState}}">
+        <div id="empty-state">
+          <h4>No JavaScript files found</h4>
+          <p>
+            Adjust the <strong>jsBudgetPath</strong> option in your webdash.json configuration file.
+          </p>
+        </div>
+      </template>
     </div>
 
   </template>
@@ -66,6 +90,7 @@
         this.backend.get('js-size')
           .then(data => {
             if (!data || !data.size) {
+              this.emptyState = true;
               return false;
             }
             const value = data.size;
